button added in carousel card and fixed overflow x

--- a/src/components/product-page/carousel-card/carousel-card.style.css
+++ b/src/components/product-page/carousel-card/carousel-card.style.css
@@ -14,3 +14,11 @@
   font-size: 16px;
   text-align: center;
 }
+.button-container {
+  padding: 0 20px 12px 20px;
+}
+.carousel-card {
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100%;
+}
