--- a/src/components/product-page/product-info/product-info.style.css
+++ b/src/components/product-page/product-info/product-info.style.css
@@ -3,6 +3,7 @@
 }
 .product-info-container h3 {
   margin-bottom: 20px;
+  cursor: pointer;
 }
 .product-info-container > div > :last-child {
   margin-bottom: 20px;
